fixed chart spacing

--- a/style.css
+++ b/style.css
@@ -433,10 +433,6 @@ h2 {
     margin-bottom: 10%;
 }
 
-.size-chart {
-    margin-bottom: 20%;
-}
-
 .logo-small {
     background-size:75%;background-image: url('images/logo-small.svg');
 }
